# apin

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: inputs.rs  main.rs  spec.rs  tui.rs  universe.rs
src/parser/: mod.rs  v20.rs  v30.rs  v31.rs  v32.rs
src/tui/: app.rs  events.rs  mod.rs  path_tree.rs
src/tui/components/: detail.rs  hint_bar.rs  mod.rs  path_detail.rs  path_tree.rs  spec_list.rs  styles.rs  tree_columns.rs
tests/fixtures/: openapi30_fixture.yaml  openapi31_fixture.yaml  openapi32_fixture.yaml  swagger20_fixture.yaml
