[package]
name = "apin"
version = "0.1.3"
edition = "2024"

[dependencies]
clap       = { version = "4", features = ["derive"] }
anyhow     = "1"
tokio      = { version = "1", features = ["full"] }
ratatui    = "0.30"
crossterm  = { version = "0.29", features = ["event-stream"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
openapiv3  = "2"
oas3       = { version = "0.20", features = ["yaml-spec"] }
serde_yaml = "0.9"
async-walkdir = "2.1.0"
indexmap = "2.13.0"
tui-tree-widget = "0.24"

