[package]
name = "apin"
version = "0.1.5"
edition = "2024"

[dependencies]
anyhow     = "1"

# CLI-related
clap       = { version = "4", features = ["derive"] }
ratatui    = "0.30"
crossterm  = { version = "0.29", features = ["event-stream"] }
tui-tree-widget = "0.24"

# Async-related
tokio      = { version = "1", features = ["macros", "rt-multi-thread", "rt", "fs", "io-util", "time"] }
tokio-stream = "0.1.18"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
async-walkdir = "2.1.0"

# Parsing-related
openapiv3  = "2"
oas3       = { version = "0.20", features = ["yaml-spec"] }
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }

# Utils
reqwest    = { version = "0.13", default-features = false, features = ["rustls"] }
indexmap = "2.13.0"
