[package]
name        = "apin"
version     = "0.4.0"
edition     = "2024"
description = "Terminal UI for navigating OpenAPI specs"
license     = "MIT"
repository  = "https://github.com/ekvii/apin"

[dependencies]
anyhow     = "1"

# CLI-related
clap       = { version = "4", features = ["derive"] }
ratatui    = "0.30"
crossterm  = { version = "0.29", features = ["event-stream"] }
tui-tree-widget = "0.24"

# Async-related
tokio      = { version = "1", features = ["macros", "rt-multi-thread", "rt", "fs", "io-util", "time"] }
tokio-stream = "0.1.18"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
async-walkdir = "2.1.0"

# Parsing-related
openapiv3  = "2"
oas3       = { version = "0.20", features = ["yaml-spec"] }
serde_yaml = "0.9"

# Utils
reqwest    = { version = "0.13", default-features = false, features = ["rustls-no-provider"] }
rustls     = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
indexmap = "2.13.0"

[profile.release]
strip         = true
lto           = "thin"
opt-level     = "z"
codegen-units = 1
panic         = "abort"
